force-app/main/default/objects/Hospital_Room__c/Hospital_Room__c.object-meta.xml
<CustomObject>
    <label>Hospital Room</label>
    <nameField>
        <label>Hospital Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hopsital Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>