force-app/main/default/objects/Hospital_Room__c/fields/Alexa_Is_Ready__c.field-meta.xml
<CustomField>
    <fullName>Alexa_Is_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked from the Alexa integration to indicate that this room has been cleaned.</description>
    <label>Alexa Is Ready</label>
    <type>Checkbox</type>
</CustomField>