force-app/main/default/objects/Hospital_Room__c/fields/Display_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Display_Assigned_User__c</fullName>
    <formula>Owner:User.FirstName  &amp; ' ' &amp;  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display_Assigned_User</label>
    <type>Text</type>
</CustomField>