force-app/main/default/objects/Hospital_Room__c/fields/Display_Floor__c.field-meta.xml
<CustomField>
    <fullName>Display_Floor__c</fullName>
    <formula>'Floor: ' + TEXT(Floor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display_Floor</label>
    <type>Text</type>
</CustomField>