force-app/main/default/objects/Hospital_Room__c/fields/Display_Room__c.field-meta.xml
<CustomField>
    <fullName>Display_Room__c</fullName>
    <formula>'Room: ' + Room__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display_Room</label>
    <type>Text</type>
</CustomField>