force-app/main/default/objects/Hospital_Room__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>