force-app/main/default/objects/Hospital_Room__c/fields/Room_ID__c.field-meta.xml
<CustomField>
    <fullName>Room_ID__c</fullName>
    <description>Can generate this UUID from PostgreSQL using: 
select gen_random_uuid();
May need to run this first:
create extension "pgcrypto";</description>
    <externalId>true</externalId>
    <label>Room ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>