force-app/main/default/objects/Hospital_Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Floor__c</columns>
    <columns>Room__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Room_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>