force-app/main/default/objects/Hospital_Room__c/listViews/My_Rooms_to_Clean.listView-meta.xml
<ListView>
    <fullName>My_Rooms_to_Clean</fullName>
    <columns>NAME</columns>
    <columns>Display_Floor__c</columns>
    <columns>Display_Room__c</columns>
    <columns>Display_Assigned_User__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Rooms</label>
</ListView>